# zstd-codec

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  build-docker.sh  docker-build.sh  flake.nix  index.js  package-lock.json  package.json  premake5.lua  run-docker.sh  update-zstd-binding.sh  update_projects.sh
.github/: dependabot.yml
cpp/: .gitignore  CMakeLists.txt  build-emscripten-release.sh  build-mac-debug.sh  emscripten-build.sh  premake5.lua  run_test.sh  update_projects.sh
cpp/src/: dummy.cc  zstd-codec.cc  zstd-codec.h  zstd-dict.cc  zstd-stream.cc  zstd-stream.h
cpp/src/binding/emscripten/: zstd-binding.cc
cpp/test/: CMakeLists.txt  CMakeLists.txt.zstd  main.cc
cpp/tool/generate-test-fixture/: .gitignore
cpp/zstd-codec/: CMakeLists.txt
cpp/zstd-codec-web/: CMakeLists.txt
cpp/zstd-codec/include/zstd-codec/: compress.h  decompress.h  zstd-codec.h
cpp/zstd-codec/include/zstd-codec/binding/: bindable.h  binder.h  compress.h  error.h
cpp/zstd-codec/src/: compress.cc  decompress.cc  main.cc  zstd-codec.cc
js/: .gitignore  .npmignore  index-local.js  index.js  package.json
js/example/: README.md  index.js  package.json
js/lib/: constants.js  helpers.js  module.js  zstd-binding.js  zstd-codec-binding-wasm.js  zstd-codec-binding-wasm.wasm  zstd-codec-binding.js  zstd-codec.js  zstd-dict.js  zstd-stream.js
js/lib/__tests__/: zstd-codec.js  zstd-stream.js
js/lib/__tests__/fixtures/: .gitattributes  lorem.txt.zst
lib/: helpers.js  zstd-codec.js  zstd.js
lib/__tests__/: zstd-codec.js
lib/__tests__/fixtures/: dance_yorokobi_mai_man.bmp.zst  dance_yorokobi_mai_woman.bmp.zst
old/cpp/: build-emscripten-debug.sh  build-mac-release.sh  premake5.lua  update_projects.sh
old/cpp/src/: raii-resource.h  zstd-codec.h  zstd-dict.h  zstd-stream.cc
old/cpp/src/binding/emscripten/: zstd-binding.cc
old/cpp/test/: main.cc
old/cpp/test/fixtures/: sample-books.json
old/cpp/tool/generate-test-fixture/: main.py  pyproject.toml
old/js/: .eslintignore  .eslintrc.yml  .gitignore  index-local.js  package.json
old/js/example/: package.json
old/js/lib/: helpers.js  module.js  zstd-stream.js
old/js/lib/__tests__/: .eslintrc.yml  zstd-codec.js  zstd-stream.js
old/tools/sample-books/: generate-sample-books.py
scripts/build-zstd/: Dockerfile  hello.c  run_build.sh
src/: common-types.h  zstd-codec-binding.cc
test/: main.cc
tools/sample-books/: Pipfile
zstd-codec-core/: CMakeLists.txt
zstd-codec-core/include/zstd-codec/: compress.h  decompress.h
zstd-codec-core/include/zstd-codec/binding/: bindable.h  binder.h  compress.h  decompress.h  error.h
zstd-codec-core/src/: compress.cc  main.cc
zstd-codec-node/: CMakeLists.txt  package-lock.json  package.json
zstd-codec-node/src/: binding.cc  binding.h  compress.cc  compress.h  decompress.cc  decompress.h
zstd-codec-web/: CMakeLists.txt  package.json
zstd-codec-web/src/: binding.cc
