[tool.poetry]
name = "generate-test-fixture"
version = "0.1.0"
description = ""
authors = ["yoshihitoh <yoshihito.arih@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.46.1"
mimesis = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
